--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,10 @@
+/* 全体要素 */
 .container {
-  padding: 0 2rem;
+  background-color: rgb(0, 0, 0, 0.5)
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
