--- a/styles/Registry.module.scss
+++ b/styles/Registry.module.scss
@@ -1,21 +1,34 @@
+$cBlack: black;
+$cWhie: white;
+
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p:wght@300;400&family=Noto+Serif+JP:wght@300&family=Poppins:wght@100&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p:wght@300;400&family=Noto+Serif+JP:wght@300&family=Poppins:wght@100&family=Zen+Kaku+Gothic+New&display=swap');
+
 .main{
     // align-items: center;　//垂直方向
-    // text-align: center; // 水平方向
+    text-align: center; // 水平方向
     background-color: rgb(245, 245, 245);
     width: 70%;
     margin: auto;
-    margin-top: 7%;
+    margin-top: 4%;
     margin-bottom: 7%;
     padding-top: 2%;
     padding-bottom: 2%;
     z-index: 1000;
     padding-left: 2%;
+    font-family: 'BIZ UDPGothic', sans-serif;
+
 
     h1{
         margin-bottom: 5%;
         margin-left: 2%;
         margin-top: 1%;
         font-size: 2.5rem;
+        text-align: left;
+    }
+
+    h2{
+        text-align: left;
     }
 }
 
@@ -50,13 +63,47 @@
     .inputT{
         height: 4vh;
         width: 50%;
-        font-size: 2rem;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        padding-left: 1em;
+        padding-right: 1em;
+        background: rgb(251, 251, 251);
+        font-size: 22px;
+
+        &:hover{
+            border:2px solid rgb(67, 67, 67);
+        }
+
+        &:focus{
+           outline:3px solid rgb(64, 167, 198);
+           border: none;
+        }
     }
 
     .inputN{
         height: 4vh;
         width: 10%;
-        font-size: 2rem;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        padding-left: 1em;
+        padding-right: 1em;
+        background: rgb(251, 251, 251);
+        font-size: 22px;
+        margin-right: 1.5%;
+
+        &:hover{
+            border:2px solid rgb(67, 67, 67);
+        }
+
+        &:focus{
+            outline:3px solid rgb(64, 167, 198);
+            border: none;
+         }
+    }
+
+    p {
+        font-size: 18px;
+        margin-top: 1%;
     }
 }
 
@@ -64,6 +111,60 @@
     // radioボタンを立て並び
     display: flex;
     flex-direction: column;
+
+     label {
+        display: flex;
+        align-items: center;
+        gap: 0 .5em;
+        position: relative;
+        cursor: pointer;
+
+        &::before,
+        &:has(:checked)::after {
+            border-radius: 3px;
+            content: '';
+        }
+
+        &::before{
+            width: 20px;
+            height: 20px;
+            border: 2px solid #dee5eb;
+            box-sizing: border-box;
+        }
+
+        &::after {
+            position: absolute;
+            top: 50%;
+            left: 10px;
+            transform: translate(-50%, -50%);
+            width: 12px;
+            height: 12px;
+            background-color: #dee5eb;
+        }
+
+        &:has(:checked)::after {
+            background-color: #2589d0;
+            animation: anim-radio-002 .3s linear;
+        }
+
+        @keyframes anim-radio-002 {
+            0% {
+                box-shadow: 0 0 0 1px transparent;
+            }
+            50% {
+                box-shadow: 0 0 0 10px #2589d033;
+            }
+            100% {
+                box-shadow: 0 0 0 10px transparent;
+            }
+        }
+        
+        input {
+            display: none;
+        }
+
+
+    }
 }
 
 .table{
@@ -81,6 +182,7 @@
     margin-left: 50px;
     margin-bottom: 1%;
     font-size: 2rem;
+   
 
 
   &::before{
@@ -107,6 +209,7 @@
     margin-bottom: 1%;
     margin-top: 3%;
     font-size: 2rem;
+    
 
 
   &::before{
@@ -123,4 +226,23 @@
   transform: translateY(-50%);
   z-index: -1;
   }
+}
+
+.btn{
+    background-color: $cBlack;
+    color: $cWhie;
+    outline: none;
+    border: none;
+    margin-top: 7%;
+    margin-bottom: 3%;
+    width: 30%;
+    height: 6vh;
+    font-size: 1.5rem;
+    font-family: 'BIZ UDPGothic', sans-serif;
+    transition: all 0.3s;
+
+    &:hover{
+        background-color: rgb(46, 46, 46);
+
+    }
 }
