--- a/styles/Registry.module.scss
+++ b/styles/Registry.module.scss
@@ -1,22 +1,34 @@
 $cBlack: black;
-$cWhie: white;
+$cWhite: white;
+$cP: rgb(183, 183, 183);
+$cRadio: rgb(98, 98, 98);
 
 @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p:wght@300;400&family=Noto+Serif+JP:wght@300&family=Poppins:wght@100&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p:wght@300;400&family=Noto+Serif+JP:wght@300&family=Poppins:wght@100&family=Zen+Kaku+Gothic+New&display=swap');
 
+
+.bg{
+    background-image: url("../public/bg.png");
+    margin-top: 0;
+    background-size: cover; 
+    background-attachment: fixed;
+    padding-top: 4%;
+    padding-bottom: 7%;
+}
+
 .main{
     // align-items: center;　//垂直方向
     text-align: center; // 水平方向
-    background-color: rgb(245, 245, 245);
-    width: 70%;
+    background-color: rgb(238, 238, 238);
+    width: 50%;
     margin: auto;
-    margin-top: 4%;
-    margin-bottom: 7%;
     padding-top: 2%;
     padding-bottom: 2%;
     z-index: 1000;
     padding-left: 2%;
     font-family: 'BIZ UDPGothic', sans-serif;
+    border-radius: 4px;
+    color: rgb(60, 60, 60);
 
 
     h1{
@@ -29,21 +41,38 @@ $cWhie: white;
 
     h2{
         text-align: left;
+        position: relative;
+        color: $cBlack;
+        margin-left: 50px;
+        margin-bottom: 1%;
+        font-size: 2rem;
+
+        span{
+            background:linear-gradient(transparent 60%, rgba(255, 0, 0, 0.9) 60%);
+        }
+    }
+
+    p{
+        color: $cP;
     }
 }
 
-.userInfo{
-    // background-color: rgb(0, 255, 153);
+.h2B{
+    margin-top: 5%;
 }
 
-.PhysicalInfo{
-    // background-color: blue;
+.PhyP{
+    text-align: left;
+    margin-left: 7%;
+    margin-bottom: 3%;
+    font-size: 18px;
+
 }
 
 .tr{
     margin-bottom: 10v;
     height: 10vh;
-    border-bottom: 1px solid #ccc !important;
+    border: 1px solid #cecece !important; 
     margin-bottom: 10px; /* 適切なマージンを追加して間隔を調整 */
 }
 
@@ -52,6 +81,7 @@ $cWhie: white;
 
     span{
         color: red;
+        margin-left: 1%;
     }
 }
 
@@ -63,40 +93,45 @@ $cWhie: white;
     .inputT{
         height: 4vh;
         width: 50%;
-        border: 1px solid #ddd;
+        background-color:  &$cWhite;
+        border: 1px solid rgb(67, 67, 67);
         border-radius: 6px;
         padding-left: 1em;
         padding-right: 1em;
-        background: rgb(251, 251, 251);
         font-size: 22px;
+        color: $cBlack;
+
 
         &:hover{
-            border:2px solid rgb(67, 67, 67);
+            border:2px solid  rgb(134, 132, 132);
         }
 
         &:focus{
-           outline:3px solid rgb(64, 167, 198);
+           outline:4px solid rgb(103, 103, 103);
            border: none;
         }
+
+
     }
 
     .inputN{
         height: 4vh;
-        width: 10%;
-        border: 1px solid #ddd;
+        width: 15%;
+        background-color: &$cWhite;
+        border: 1px solid rgb(67, 67, 67);
         border-radius: 6px;
         padding-left: 1em;
         padding-right: 1em;
-        background: rgb(251, 251, 251);
         font-size: 22px;
         margin-right: 1.5%;
+        color: $cBlack;
 
         &:hover{
-            border:2px solid rgb(67, 67, 67);
+            border:2px solid  rgb(134, 132, 132);
         }
 
         &:focus{
-            outline:3px solid rgb(64, 167, 198);
+            outline:4px solid rgb(103, 103, 103);
             border: none;
          }
     }
@@ -128,7 +163,7 @@ $cWhie: white;
         &::before{
             width: 20px;
             height: 20px;
-            border: 2px solid #dee5eb;
+            border: 2px solid $cRadio;
             box-sizing: border-box;
         }
 
@@ -139,11 +174,11 @@ $cWhie: white;
             transform: translate(-50%, -50%);
             width: 12px;
             height: 12px;
-            background-color: #dee5eb;
+            background-color: $cRadio;
         }
 
         &:has(:checked)::after {
-            background-color: #2589d0;
+            background-color: red;
             animation: anim-radio-002 .3s linear;
         }
 
@@ -152,7 +187,7 @@ $cWhie: white;
                 box-shadow: 0 0 0 1px transparent;
             }
             50% {
-                box-shadow: 0 0 0 10px #2589d033;
+                box-shadow: 0 0 0 10px #d0252533;
             }
             100% {
                 box-shadow: 0 0 0 10px transparent;
@@ -174,65 +209,12 @@ $cWhie: white;
 
 }
 
-.h2A{
-    position: relative;
-    color: #333;
-    text-shadow: 0 0 2px white;
-    z-index: 2;
-    margin-left: 50px;
-    margin-bottom: 1%;
-    font-size: 2rem;
-   
-
-
-  &::before{
-    content: "";
-  position: absolute;
-  background: #9de5ff;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  top: 50%;
-  left: -20px;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: -1;
-  }
-}
-
-.h2B{
-    position: relative;
-    color: #333;
-    text-shadow: 0 0 2px white;
-    z-index: 2;
-    margin-left: 50px;
-    margin-bottom: 1%;
-    margin-top: 3%;
-    font-size: 2rem;
-    
-
-
-  &::before{
-    content: "";
-  position: absolute;
-  background: #ebff79;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  top: 50%;
-  /* border: dashed 1px white; */
-  left: -20px;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: -1;
-  }
-}
-
 .btn{
+    cursor: pointer;
     background-color: $cBlack;
-    color: $cWhie;
+    color: $cWhite;
     outline: none;
-    border: none;
+    border:solid $cWhite;
     margin-top: 7%;
     margin-bottom: 3%;
     width: 30%;
@@ -242,7 +224,16 @@ $cWhie: white;
     transition: all 0.3s;
 
     &:hover{
-        background-color: rgb(46, 46, 46);
-
+        background-color: rgb(247, 244, 244);
+        border:solid $cBlack;
+        color: $cBlack;
     }
+}
+
+
+.passwordVisible{
+cursor: pointer;
+width: 7%;
+height: 4vh;
+margin-left: 2%;
 }
