--- a/styles/Registry.module.scss
+++ b/styles/Registry.module.scss
@@ -52,9 +52,9 @@ $cRadio: rgb(98, 98, 98);
         }
     }
 
-    p{
-        color: $cP;
-    }
+    // p{
+    //     color: $cP;
+    // }
 }
 
 .h2B{
