--- a/styles/Registry.module.scss
+++ b/styles/Registry.module.scss
@@ -242,3 +242,26 @@ margin-left: 2%;
 .error{
     color: red;
 }
+
+.disableBtn {
+    background-color: grey;
+    border: none;
+    
+    &:hover{
+        background-color: grey;
+        color: $cWhite;
+        border: none;
+    }
+}
+
+// error画面
+.errorMain{
+    background-color: rgb(192, 192, 192);
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    text-align: center;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
