--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,12 +1,16 @@
 .main {
-  height: 90vh;
-  margin-left: 20%;
-  margin-right: 20%;
+  height: 80vh;
+  margin-left: 30%;
+  margin-right: 30%;
   margin-top: 7vh;
   padding: 60px 60px;
   background: url(https://picsum.photos/id/1004/5616/3744) no-repeat center center #505050;
   background-size: cover;
   box-shadow: 0px 30px 60px -5px #000;
+}
+
+.logo {
+  height: 20vh;
 }
 
 .flex {
@@ -15,13 +19,23 @@
 }
 
 .flex2 {
+  display: block;
+}
+
+.centeredContent {
+  width: 100%;
+  justify-content: center;
   display: flex;
-  flex-direction: column;
+}
+
+.coverdInput {
+  display: flex;
+  justify-content: center;
 }
 
 .input {
   border: none;
-  width: 89%;
+  width: 60%;
   padding: 1vh 2vh;
   display: block;
   height: 4vh;
@@ -43,16 +57,22 @@
 }
 
 .span {
-  margin-left: 20px;
+  margin-left: 20%;
   font-family: "Montserrat", sans-serif;
   color: #fff;
 }
 
+.centeredButton {
+  display: flex;
+  justify-content: center;
+  margin-top: 5vh;
+}
+
 .btn {
-  background-color: #1161ed;
+  background-color: #b61a01;
   color: #FFF;
-  width: 89%;
-  padding: 10px 20px;
+  width: 60%;
+  padding: 1vh 2vh;
   display: block;
   height: 39px;
   border-radius: 20px;
@@ -60,10 +80,11 @@
   transition: all 0.5s ease-in-out;
   border: none;
   text-transform: uppercase;
+  text-align: center;
 }
 .btn:hover {
-  background: #4082f5;
-  box-shadow: 0px 4px 35px -5px #4082f5;
+  background: rgb(212, 1, 1);
+  box-shadow: 0px 4px 35px -5px #b61a01;
   cursor: pointer;
 }
 .btn:focus {
