--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -1,8 +1,10 @@
+$btnC: #b61a01;
+
 
 .main{
-    height: 90vh;
-    margin-left: 20%;
-    margin-right: 20%;
+    height: 80vh;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 7vh;
     padding: 60px 60px;
     background: url(https://picsum.photos/id/1004/5616/3744) no-repeat   center center #505050;   
@@ -11,21 +13,38 @@
 }
 
 
+
+.logo{
+  height: 20vh;
+}
+
+
 .flex{
     height: 50vh;
     padding-top: 80px;
-   
 }
 
 .flex2{
   // spanとinputを縦並び
+  // display: flex;　//横並びにする
+  // flex-direction: column; //並べる方向を縦にする
+  display: block;
+}
+
+.centeredContent {
+  width: 100%;
+  justify-content: center;
   display: flex;
-  flex-direction: column;
+}
+
+.coverdInput{
+  display: flex;
+  justify-content: center;
 }
 
 .input{
     border: none;
-    width: 89%;
+    width: 60%;
     padding: 1vh 2vh;
     display: block;
     height: 4vh;
@@ -38,6 +57,7 @@
     transition: all 0.5s ease-in-out;
     display: inline-block;
     font-size: 1.5rem;
+    
 
     &:focus{
         outline: 0;
@@ -48,16 +68,23 @@
 }
 
 .span{
-    margin-left: 20px;
+    margin-left: 20%;
     font-family: 'Montserrat', sans-serif;
     color: #fff;
+
+}
+
+.centeredButton {
+  display: flex;
+  justify-content: center;
+  margin-top: 5vh;
 }
 
 .btn{
-    background-color: #1161ed;
+    background-color: $btnC;
     color: #FFF;
-    width: 89%;
-    padding: 10px 20px;
+    width: 60%;
+    padding: 1vh 2vh;
     display: block;
     height: 39px;
     border-radius: 20px;
@@ -65,10 +92,11 @@
     transition: all 0.5s ease-in-out;
     border: none;
     text-transform: uppercase;
+    text-align: center;
 
   &:hover{
-    background: #4082f5;
-    box-shadow: 0px 4px 35px -5px #4082f5;
+    background: rgb(212, 1, 1);
+    box-shadow: 0px 4px 35px -5px $btnC;
     cursor: pointer;
   }
 
