--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -7,9 +7,9 @@ $btnC: #b61a01;
     margin-right: 30%;
     margin-top: 7vh;
     padding: 60px 60px;
-    background: url(https://picsum.photos/id/1004/5616/3744) no-repeat   center center #505050;   
-    background-size: cover;
+    background-color: #505050;   
     box-shadow: 0px 30px 60px -5px #000;
+    border-radius: 10px;
 }
 
 
