--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -44,7 +44,6 @@
   border: 2px solid rgba(255, 255, 255, 0);
   overflow: hidden;
   margin-top: 15px;
-  margin-bottom: 6vh;
   transition: all 0.5s ease-in-out;
   display: inline-block;
   font-size: 1.5rem;
@@ -89,4 +88,24 @@
 }
 .btn:focus {
   outline: none;
+}
+
+.error {
+  color: red;
+  margin-top: 2vh;
+  text-align: center;
+  margin-bottom: 3vh;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
+}
+.link:hover {
+  text-decoration: underline;
+}
+
+.linkBox {
+  text-align: right;
+  margin-top: 2vh;
 }/*# sourceMappingURL=Login.module.css.map */
