--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -56,6 +56,7 @@
   text-align: center;
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 .nav {
@@ -63,7 +64,7 @@
   right: -300vw;
   width: 70%;
   max-width: 400px;
-  height: 70vh;
+  height: 45vh;
   display: block;
   position: fixed;
   align-items: center;
