--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,100 @@
-/* 全体要素 */
-.container {
-  background-color: rgb(0, 0, 0, 0.5)
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Zen+Antique&display=swap");
+.body {
+  height: 100%;
+  width: 100%;
+  background-image: url("/images/main.png");
+  /* 画像を全て表示されるようにする */
+  background-size: cover;
+  /* 画像の中心を表示する */
+  background-position: center;
+  /* スクロールしても画像を保つ */
+  background-attachment: fixed;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: white;
 }
-
-.main {
-  min-height: 100vh;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.body::after {
+  /* 疑似要素は必要 */
+  content: "";
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 500vh;
+  top: 10vh;
+  left: 0;
+  opacity: 0.5;
+  display: block;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  z-index: 1;
+  font-size: 2rem;
+}
+.title.active {
+  opacity: 1;
+  transition: all 3s;
 }
 
-.title,
-.description {
-  text-align: center;
+.section {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  z-index: 1;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.img_wrap {
+  position: relative;
+  top: 40%;
+  /* leftはjavascriptで付加される */
+  height: 40%;
+  width: 1px;
+  overflow: hidden;
+  opacity: 0;
+}
+.img_wrap.active {
+  width: 40vw;
+  opacity: 1;
+  transition: opacity 1s, width 2s;
+}
+.img_wrap.title.active > .img {
+  /* imgタグに対してスケールを元に戻す */
+  transform: scale(1);
+  transition: 1s ease-out;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.img {
+  /* img_wrapを親要素とする */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40vw;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  /* 大きくなってから小さくなっていく */
+  transform: scale(1.6);
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.h2 {
+  position: absolute;
+  font-size: 2.3rem;
+  top: 70%;
+  z-index: 2;
+  letter-spacing: 2px;
+  opacity: 0;
+  transition: all 0.2s;
+}
+.h2.active {
+  opacity: 1;
+  transition: opacity 3s;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
+.span {
+  color: red;
+}/*# sourceMappingURL=Home.module.css.map */
