--- a/styles/Registry.module.css
+++ b/styles/Registry.module.css
@@ -219,4 +219,8 @@
   text-align: center;
   padding-top: 10%;
   padding-bottom: 10%;
+}
+
+.nochange {
+  color: blue;
 }/*# sourceMappingURL=Registry.module.css.map */
